# stanford-algorithms

./: .gitignore  Cargo.toml  README.md  flake.nix  result
data/: .gitignore  kargerEnvelopes.txt  kargerTriangle.txt
data/codingame/puzzle/shadow_casting/: 1.in
src/: example.rs  graph.rs  main.rs  util.rs
src/aa_introduction/: aa_dcmul.rs  ab_sort.rs  ac_merge.rs
src/ab_hw1/: aa_inversions.rs
src/ac_hw2/: quick.rs
src/ad_hw3/: aa_karger.rs
src/ae_hw4/: aa_kosajaru.rs  ab_kosyak.rs
src/af_hw5_dijkstra/: README.md  aa_dijkstra.rs
src/ag_hw6/: aa_two_sum.rs  ab_median.rs
src/codingame/puzzle/: shadow_casting.rs  shadow_casting.rs.submission  the_lost_files.rs
src/ctf/: rusty_chal.rs
src/howto/: custom_array.rs  raw_entry_api.rs
src/janestreet/: die-agony.rs
