[package]
name = "learning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
chrono = { version = "*", features = ["serde"] }
